--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,10 @@
   align-items: center;
 }
 
+h1 {
+  color: #334A52;
+}
+
 .field {
   width: 100%;
   max-width: 500px;
@@ -22,12 +26,48 @@
   width: 100%;
   max-width: 115px;
   height: 115px;
-  border: 1px solid #ccc;
+  border: 1px solid #96AFB8;
   border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 5px 0;
+  transition: all .3s;
+  cursor: pointer;
+
+  &:hover {
+    border-color: #334A52;
+  }
+
+  div {
+    width: 100%;
+    height: 100%;
+  }
+
+  .one {
+    background-color: #60DAFB;
+  }
+  .two {
+    background-color: #334A52;
+  }
+  .three {
+    background-color: #96AFB8;
+  }
+  .four {
+    background-color: #E2B7F4;
+  }
+  .five {
+    background-color: #00C5A5;
+  }
+  .six {
+    background-color: #9B4500;
+  }
+  .seven {
+    background-color: #AC8A72;
+  }
+  .eight {
+    background-color: #FFE9CF;
+  }
 }
 
 .button {
@@ -36,8 +76,16 @@
   justify-content: center;
   height: 52px;
   width: 100%;
-  border: 1px solid #ccc;
+  border: 1px solid #96AFB8;
+  color: #96AFB8;
   border-radius: 5px;
   margin-top: 10px;
   text-transform: uppercase;
+  transition: all .5s;
+  cursor: pointer;
+
+  &:hover {
+    border-color: #334A52;
+    color: #334A52;
+  }
 }
