--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "LCD14";
+  src : url(assets/fonts/LCD14.otf);
+}
+
 .App {
   height: 100vh;
   display: flex;
@@ -5,10 +10,12 @@
   text-align: center;
   justify-content: center;
   align-items: center;
+  font-family: "LCD14";
+  background: url(./assets/x.jpg);
 }
 
 h1 {
-  color: #334A52;
+  color: #fcb833;
 }
 
 .field {
@@ -16,9 +23,10 @@ h1 {
   max-width: 500px;
   
   .field__game {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+    padding: 5px;
   }
 }
 
@@ -31,42 +39,76 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 5px 0;
   transition: all .3s;
   cursor: pointer;
 
   &:hover {
-    border-color: #334A52;
+    border-color: rgba(0, 0, 0, 0.7);
   }
 
   div {
     width: 100%;
     height: 100%;
+    background: center / contain no-repeat;
+    border-radius: 5px; 
   }
 
+  .open {
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+
+  .ball {
+    background-image: url(assets/pokeball.png);
+    background-color: rgba(0, 0, 0, 0.4);
+  }
   .one {
-    background-color: #60DAFB;
+    background-image: url(assets/pikachu.png);
   }
   .two {
-    background-color: #334A52;
+    background-image: url(assets/bulbasaur.png);
   }
   .three {
-    background-color: #96AFB8;
+    background-image: url(assets/charmeleon.png);
   }
   .four {
-    background-color: #E2B7F4;
+    background-image: url(assets/butterfree.png);
   }
   .five {
-    background-color: #00C5A5;
+    background-image: url(assets/pidgeotto.png);
   }
   .six {
-    background-color: #9B4500;
+    background-image: url(assets/psyduck.png);
   }
   .seven {
-    background-color: #AC8A72;
+    background-image: url(assets/rattata.png);
   }
   .eight {
-    background-color: #FFE9CF;
+    background-image: url(assets/squirtle.png);
+  }
+  @media (max-width: 425px) {
+    height: 96px;
+  }
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 5px;
+  box-sizing: border-box;
+  padding: 5px;
+}
+
+.steps {
+  width: 23%;
+  color:  red;
+  border: 1px solid red;
+  border-radius: 5px;
+  padding: 10px 0;
+
+  @media (max-width: 425px) {
+    width: 48%;
   }
 }
 
@@ -76,16 +118,18 @@ h1 {
   justify-content: center;
   height: 52px;
   width: 100%;
-  border: 1px solid #96AFB8;
-  color: #96AFB8;
+  border: 2px solid black;
+  color: black;
+  background-color: #fcb833;
   border-radius: 5px;
   margin-top: 10px;
   text-transform: uppercase;
   transition: all .5s;
   cursor: pointer;
+  box-sizing: border-box;
 
   &:hover {
-    border-color: #334A52;
-    color: #334A52;
+    border-color: red;
+    color: red;
   }
 }
