--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,7 @@
   align-items: center;
   font-family: "LCD14";
   background: url(./assets/x.jpg);
+  background-size: cover;
 }
 
 h1 {
@@ -22,7 +23,7 @@ h1 {
   width: 100%;
   max-width: 500px;
   
-  .field__game {
+  .field-game {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 10px;
@@ -54,12 +55,12 @@ h1 {
   }
 
   .open {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.8);
   }
 
   .ball {
     background-image: url(assets/pokeball.png);
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.6);
   }
   .one {
     background-image: url(assets/pikachu.png);
@@ -86,7 +87,7 @@ h1 {
     background-image: url(assets/squirtle.png);
   }
   @media (max-width: 425px) {
-    height: 96px;
+    height: 90px;
   }
 }
 
@@ -98,6 +99,12 @@ h1 {
   border-radius: 5px;
   box-sizing: border-box;
   padding: 5px;
+  @media (max-width: 425px) {
+    h1 {
+      margin-block-start: 0.45em;
+      margin-block-end: 0.45em;
+    }
+  }
 }
 
 .steps {
